Icon now fades in once page has loaded

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 		
 		<link href="assets/stylesheet/main.css" rel="stylesheet" type="text/css">
 		
+		<script src="assets/script/wiki.js"></script>
+		
 	</head>
 	
 	<body>
 	
-		<div class="text-center">
+		<div class="text-center image-container">
 			<img src="assets/images/wikipedia.png" alt="Wikipedia icon">
 		</div>
 		
