Page now includes link to random wikipedia page

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
 	
 	<body>
 	
-		<div class="text-center image-container">
+		<div id="image-container" class="text-center container">
 			<img src="assets/images/wikipedia.png" alt="Wikipedia icon">
+		</div>
+		
+		<div id="random-link-container" class="text-center container">
+			<a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Go to a random article</a>
 		</div>
 		
 	</body>
