Added text input so users can search for articles on a specific subject or topic

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 			<a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Go to a random article</a>
 		</div>
 		
+		<div id="search-container" class="text-center container">
+			<input type="text" name="search">
+			<p>Or search for something here</p>
+		</div>
+		
 	</body>
 
 </html>
