Improved display of input field

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</div>
 		
 		<div id="random-link-container" class="text-center container">
-			<a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Go to a random article</a>
+			<a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Go to a random article on a new page</a>
 		</div>
 		
 		<div id="search-container" class="text-center container">
