Result containers now link to articles on wikipedia

--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
 		</div>
 		
 		<div id="search-container" class="text-center container">
-			<input type="text" name="search">
+			<input type="text" name="search" placeholder="search">
 			<p>Or search for something here</p>
+		</div>
+		
+		<div id="results-container">
+				
 		</div>
 		
 	</body>
