Changed text below input area

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		
 		<div id="search-container" class="text-center container">
 			<input type="text" name="search" placeholder="search">
-			<p>Or search for something here</p>
+			<p>Or search for articles here</p>
 		</div>
 		
 		<div id="results-container">
