Cleaned up files

--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
 		<!-- Latest compiled JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		
+		<!-- my stylesheet -->
 		<link href="assets/stylesheet/main.css" rel="stylesheet" type="text/css">
 		
+		
+		<!-- my script -->
 		<script src="assets/script/wiki.js"></script>
 		
 	</head>
 	
 	<body>
-	
+		
 		<div id="image-container" class="text-center container">
 			<img src="assets/images/wikipedia.png" alt="Wikipedia icon">
 		</div>
